Altera insconciente -> inconciente

--- a/ei.tex
+++ b/ei.tex
@@ -15,7 +15,7 @@
 
 \author{Jesus de Nazaré e Paulo de Tarso}
 
-\date{\today, versão 0.14- alfa}
+\date{\today, versão 0.15- alfa}
 
 \makeatletter
   \pretocmd{\chapter}{\addtocontents{toc}{\protect\addvspace{15\p@}}}{}{}
@@ -76,7 +76,7 @@ tecnologia espiritual.
 
 É abstração para treinamento neural. É repositório ancestral de meios para
 ampliar a percepção e consciência dos atos e pensamentos, ou seja, para trazer à
-consciência aspectos de antemão apenas acessados pelo insconsciente.
+consciência aspectos de antemão apenas acessados pelo inconsciente.
 
 A natureza fragmentada do pensamento humano coloca a concepção da unidade como
 algo transcendental, ligada às práticas meditativas e assumindo plena
