Add qquad todo inicio de paragrafo e parindent automatico

--- a/ei.tex
+++ b/ei.tex
@@ -17,6 +17,9 @@
 
 \date{\today, versão 0.15- alfa}
 
+\usepackage{parskip}
+\setlength{\parindent}{20pt}
+
 \makeatletter
   \pretocmd{\chapter}{\addtocontents{toc}{\protect\addvspace{15\p@}}}{}{}
   \pretocmd{\section}{\addtocontents{toc}{\protect\vspace{-3mm}}}{}{}
@@ -35,9 +38,9 @@ aproveitamento de todos os indivíduos.
 
 \section{Ponto de vista e propósito deste texto}
 
-Este texto parte tanto da premissa de incompletude da representação de mundo de
-qualquer afirmação, quanto do princípio de mundo aberto, segundo o qual um fato
-pode ser verdade independente do conhecimento ou não de alguma fonte.
+\qquad Este texto parte tanto da premissa de incompletude da representação de
+mundo de qualquer afirmação, quanto do princípio de mundo aberto, segundo o qual
+um fato pode ser verdade independente do conhecimento ou não de alguma fonte.
 
 O propósito é difundir o aspecto instrumental e útil da espiritualidade para os
 indivíduos praticantes. A motivação é desmistificar o assunto e colocar o
@@ -52,9 +55,10 @@ sim características humanas mais gerais.
 
 \section{A espiritualidade como vantagem evolutiva}
 
-A atividade espiritual é observada com facilidade em quase todas as culturas,
-portanto é traço preservado pela evolução. Há vantagens para o indivíduo e/ou
-alguma escala da população. Dentre as causas desta vantagem evolutiva estão:
+\qquad A atividade espiritual é observada com facilidade em quase todas as
+culturas, portanto é traço preservado pela evolução. Há vantagens para o
+indivíduo e/ou alguma escala da população. Dentre as causas desta vantagem
+evolutiva estão:
 
 \begin{itemize}
   \item treinamento neural e outras elaborações mentais, como descrito na
@@ -68,15 +72,15 @@ alguma escala da população. Dentre as causas desta vantagem evolutiva estão:
   ajudado e até defendido em algum confronto.
 \end{itemize}
 
-Os sapiens saíram do leste da África pela segunda vez com túmulos, pintando, com
-capacidades sociais e mentais mais avançadas, porque tinham descoberto a
-tecnologia espiritual.
+\qquad Os sapiens saíram do leste da África pela segunda vez com túmulos,
+pintando, com capacidades sociais e mentais mais avançadas, porque tinham
+descoberto a tecnologia espiritual.
 
 \section{A espiritualidade como método de conquista da realidade}\label{met}
 
-É abstração para treinamento neural. É repositório ancestral de meios para
-ampliar a percepção e consciência dos atos e pensamentos, ou seja, para trazer à
-consciência aspectos de antemão apenas acessados pelo inconsciente.
+\qquad É abstração para treinamento neural. É repositório ancestral de meios
+para ampliar a percepção e consciência dos atos e pensamentos, ou seja, para
+trazer à consciência aspectos de antemão apenas acessados pelo inconsciente.
 
 A natureza fragmentada do pensamento humano coloca a concepção da unidade como
 algo transcendental, ligada às práticas meditativas e assumindo plena
@@ -87,11 +91,11 @@ intensos e transes.
 
 \section{A espiritualidade como tecnologia ingênua}
 
-Sistemas formais sem uma definição axiomática única são por vezes chamados
-``ingênuos''. Neste mesmo sentido, os símbolos, rituais e sistematizações de
-esferas espirituais caminham na direção de formalização e estabilização de
-ideias sem que haja uma definição axiomática única ou mesmo nítida do sistema
-considerado.
+\qquad Sistemas formais sem uma definição axiomática única são por vezes
+chamados ``ingênuos''. Neste mesmo sentido, os símbolos, rituais e
+sistematizações de esferas espirituais caminham na direção de formalização e
+estabilização de ideias sem que haja uma definição axiomática única ou mesmo
+nítida do sistema considerado.
 
 O desenvolvimento da espiritualidade como tecnologia ingênua é intenso desde sua
 gênese com os sapiens. Suas bases empíricas e de transmissão para descendentes
@@ -99,8 +103,8 @@ são perfeitamente racionalizáveis e passíveis de aproveitamento consciente.
 
 \section{Aproveitamento eficiente do arcabouço}
 
-As próprias tradições possuem instruções para melhor aproveitamento do legado
-espiritual. Dentre estas, constam:
+\qquad As próprias tradições possuem instruções para melhor aproveitamento do
+legado espiritual. Dentre estas, constam:
 
 \begin{itemize}
   \item Prática: a alocação de tempo para atividades espirituais desenvolve
