--- a/ei.tex
+++ b/ei.tex
@@ -15,7 +15,7 @@
 
 \author{Jesus de Nazaré e Paulo de Tarso}
 
-\date{\today, versão 0.15- alfa}
+\date{\today, versão 0.16- alfa}
 
 \usepackage{parskip}
 \setlength{\parindent}{20pt}
@@ -45,7 +45,9 @@ um fato pode ser verdade independente do conhecimento ou não de alguma fonte.
 O propósito é difundir o aspecto instrumental e útil da espiritualidade para os
 indivíduos praticantes. A motivação é desmistificar o assunto e colocar o
 amadurecimento no campo que merece: de aproveitamento. Independente da crença do
-beneficiário e mesmo que em nada creia.
+beneficiário e mesmo que em nada creia. \footnote{Portanto ide, fazei discípulos
+  de todas as nações, batizando-os em nome do Pai, e do Filho, e do Espírito
+  Santo; \textit{Mateus 28:19}}
 
 Ressonâncias corruptas, como preconceituosas ou corporativistas, são amplamente
 observadas na esfera religiosa. É assumido aqui que tal problema é fruto de
