Add ponto extra cap4par2

--- a/ei.tex
+++ b/ei.tex
@@ -99,6 +99,9 @@ sistematizações de esferas espirituais caminham na direção de formalização
 estabilização de ideias sem que haja uma definição axiomática única ou mesmo
 nítida do sistema considerado.
 
+Essa formalização remete ao fundamento, daquele que não se vangloria de sí
+próprio mas obedece à uma entidade única e singular.
+
 O desenvolvimento da espiritualidade como tecnologia ingênua é intenso desde sua
 gênese com os sapiens. Suas bases empíricas e de transmissão para descendentes
 são perfeitamente racionalizáveis e passíveis de aproveitamento consciente.
