Add citacao de 1 Coríntios 1:25 no cap3par2

--- a/ei.tex
+++ b/ei.tex
@@ -15,7 +15,7 @@
 
 \author{Jesus de Nazaré e Paulo de Tarso}
 
-\date{\today, versão 0.16- alfa}
+\date{\today, versão 0.17- alfa}
 
 \usepackage{parskip}
 \setlength{\parindent}{20pt}
@@ -45,9 +45,12 @@ um fato pode ser verdade independente do conhecimento ou não de alguma fonte.
 O propósito é difundir o aspecto instrumental e útil da espiritualidade para os
 indivíduos praticantes. A motivação é desmistificar o assunto e colocar o
 amadurecimento no campo que merece: de aproveitamento. Independente da crença do
-beneficiário e mesmo que em nada creia. \footnote{Portanto ide, fazei discípulos
-  de todas as nações, batizando-os em nome do Pai, e do Filho, e do Espírito
-  Santo; \textit{Mateus 28:19}}
+beneficiário e mesmo que em nada creia.
+
+\begin{quotation}
+  Portanto ide, fazei discípulos de todas as nações, batizando-os em nome do
+  Pai, e do Filho, e do Espírito Santo; \textit{Mateus 28:19}
+\end{quotation}
 
 Ressonâncias corruptas, como preconceituosas ou corporativistas, são amplamente
 observadas na esfera religiosa. É assumido aqui que tal problema é fruto de
@@ -90,6 +93,11 @@ visibilidade na figura do Deus monoteísta. Neste sentido, a concepção da figu
 onipotente (onipresente e onisciente) é um curto-circuito de libido, permitindo
 acessos profundos e eficientes ao inconsciente, muitas vezes com prazeres
 intensos e transes.
+
+\begin{quotation}
+  Porque a loucura de Deus é mais sábia do que os homens; e a fraqueza de Deus é
+  mais forte do que os homens. \textit{1 Coríntios 1:25}
+\end{quotation}
 
 \section{A espiritualidade como tecnologia ingênua}
 
