--- a/ei.tex
+++ b/ei.tex
@@ -14,7 +14,7 @@
 \title{Espiritualidade Instrumental}
 \author{Jesus de Nazaré e Paulo de Tarso}
 
-\date{\today, versão 0.13- alfa}
+\date{\today, versão 0.14 - beta}
 
 \usepackage{etoolbox}
 
@@ -30,41 +30,49 @@
 
 
 \begin{abstract}
-Argumentações e apontamentos de aspectos instrumentais da espiritualidade para aproveitamento de todos os indivíduos.
+Apontamentos instrumentais da espiritualidade para aproveitamento de todos os indivíduos.
 \end{abstract}
 
 \tableofcontents
 
 \section{Ponto de vista e propósito deste texto}
-Este texto parte tanto da premissa de incompletude da representação de mundo de qualquer afirmação, quanto do princípio de mundo aberto, segundo o qual um fato pode ser verdade independente do conhecimento ou não de alguma fonte.
+Este texto subentende a incompletude da representação de mundo de qualquer afirmação e também o princípio de mundo aberto, segundo o qual um fato pode ser verdade independentemente do (re)conhecimento de alguma fonte.
 
-O propósito é difundir o aspecto instrumental e útil da espiritualidade para os indivíduos praticantes. A motivação é desmistificar o assunto e colocar o amadurecimento no campo que merece: de aproveitamento. Independente da crença do beneficiário e mesmo que em nada creia.
+O propósito é difundir o aspecto instrumental e útil da espiritualidade para os indivíduos praticantes. A motivação é desmistificar o assunto e colocar o amadurecimento no campo que merece: de aproveitamento, de usufruto, independente da crença do beneficiário e mesmo que em nada creia.
 
-Ressonâncias corruptas, como preconceituosas ou corporativistas, são amplamente observadas na esfera religiosa. É assumido aqui que tal problema é fruto de
-dificuldades mais gerais. Uma boa comparação é a corrupção
-da indústria de alimentos, ao passo que alimentar-se não é a fonte desta mesma dificuldade, mas sim características humanas mais gerais.
+Ressonâncias corruptas, como preconceituosas ou corporativistas, são amplamente observadas na esfera religiosa. Tal problema é fruto de
+dificuldades mais gerais.
+Considere a da indústria de alimentos: há pessoas sem alimentação e outras mau alimentadas.
+Alimentar-se não é a fonte destes problemas,
+mas sim características humanas mais gerais,
+tais como a ganância e a gula.
 
-\section{A espiritualidade como vantagem evolutiva}
-A atividade espiritual é observada com facilidade em quase todas as culturas, portanto é traço preservado pela evolução. Há vantagens para o indivíduo e/ou alguma escala da população. Dentre as causas desta vantagem evolutiva estão:
+\section{A espiritualidade como vantagem darwinista}
+A atividade espiritual é observada em todas as culturas, portanto é traço preservado pela evolução biológica.
+Há vantagens para o indivíduo e/ou alguma escala da população. Dentre as causas desta vantagem evolutiva estão:
 \begin{itemize}
-    \item treinamento neural e outras elaborações mentais, como descrito na parte~\ref{met}.
-    \item Estabelecimento de convenções (repertórios comuns de informação).
-    \item Preservação e propagação de comportamentos vantajosos evolutivamente. Por exemplo: se alguém não matar ou roubar (seja por princípios religiosos ou não), terá menos chance de ser assassinado ou prejudicado e mais chance de ser ajudado e até defendido em algum confronto.
+  \item treinamento neural e outras elaborações mentais: conceitos abstratos, ritos, músicas, como descrito na parte~\ref{met}. A meditação, por exemplo, aumenta o hipocampo, módulo cerebral central para a memória e diversas outras funções-chave.
+    \item Estabelecimento de convenções (repertórios comuns de informação), assim como a hospitalidade com estrangeiros e propensão ao perdão.
+    \item Preservação e propagação de comportamentos vantajosos. Por exemplo: se alguém não matar, roubar ou desejar o cônjuge alheio (seja por princípios religiosos ou não), terá menos chances de ser assassinado ou prejudicado e mais chances de ser ajudado e até defendido em algum confronto.
 \end{itemize}
 
-Os sapiens saíram do leste da África pela segunda vez com túmulos, pintando, com capacidades sociais e mentais mais avançadas, porque tinham descoberto a tecnologia espiritual.
+Ao descobrirem a tecnologia espiritual, os sapiens
+saíram do leste da África pintando,
+com ritos funerários elaborados,
+capacidades sociais e mentais mais avançadas,
+e aculturaram os 5 continentes.
 
 \section{A espiritualidade como método de conquista da realidade}\label{met}
-É abstração para treinamento neural. É repositório ancestral de meios para ampliar a percepção e consciência dos atos e pensamentos, ou seja, para trazer à consciência aspectos de antemão apenas acessados pelo insconsciente.
+É abstração para treinamento neural. É repositório ancestral de meios para ampliar a percepção dos atos e pensamentos, ou seja, para trazer à consciência aspectos de antemão acessados apenas pelo insconsciente.
 
-A natureza fragmentada do pensamento humano coloca a concepção da unidade como algo transcendental, ligada às práticas meditativas e assumindo plena visibilidade na figura do Deus monoteísta. Neste sentido, a concepção da figura onipotente (onipresente e onisciente) é um curto-circuito de libido, permitindo acessos profundos e eficientes ao inconsciente, muitas vezes com prazeres intensos e transes.
+A natureza fragmentada do pensamento humano coloca a concepção da unidade como algo transcendental, ligada às práticas meditativas e assumindo plena visibilidade na figura do Deus monoteísta. Neste sentido, a concepção da figura onipotente (onipresente e onisciente) é um curto-circuito de ideações, de libido, permitindo acessos profundos e eficientes ao inconsciente, muitas vezes com prazeres intensos e transes.
 
 \section{A espiritualidade como tecnologia ingênua}
 Sistemas formais sem uma definição axiomática única são por vezes chamados ``ingênuos''. Neste mesmo sentido, os símbolos, rituais e sistematizações de esferas espirituais caminham na direção de formalização e estabilização de ideias sem que haja uma definição axiomática única ou mesmo nítida do sistema considerado.
 
-O desenvolvimento da espiritualidade como tecnologia ingênua é intenso desde sua gênese com os sapiens. Suas bases empíricas e de transmissão para descendentes são perfeitamente racionalizáveis e passíveis de aproveitamento consciente.
+O desenvolvimento da espiritualidade como tecnologia ingênua é intenso desde sua gênese com os sapiens e demais hominídeos. Suas bases empíricas e de transmissão para descendentes são perfeitamente racionalizáveis e passíveis de aproveitamento consciente.
 
-\section{Aproveitamento eficiente do arcabouço}
+\section{Aproveitamento eficiente da espiritualidade}
 As próprias tradições possuem instruções para melhor aproveitamento do legado espiritual. Dentre estas, constam:
 \begin{itemize}
     \item Prática: a alocação de tempo para atividades espirituais desenvolve capacidades fluentes para seu aproveitamento.
