--- a/ei.tex
+++ b/ei.tex
@@ -72,7 +72,7 @@ Sistemas formais sem uma definição axiomática única são por vezes chamados 
 
 O desenvolvimento da espiritualidade como tecnologia ingênua é intenso desde sua gênese com os sapiens e demais hominídeos. Suas bases empíricas e de transmissão para descendentes são perfeitamente racionalizáveis e passíveis de aproveitamento consciente.
 
-\section{Aproveitamento eficiente da espiritualidade}
+\section{Aproveitamento eficiente}
 As próprias tradições possuem instruções para melhor aproveitamento do legado espiritual. Dentre estas, constam:
 \begin{itemize}
     \item Prática: a alocação de tempo para atividades espirituais desenvolve capacidades fluentes para seu aproveitamento.
